--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
 				<artifactId>spring-boot-starter-web</artifactId>
 			</dependency>
 
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.5.0</version> <!-- Verifique a versão mais recente -->
+		</dependency>
+
 	</dependencies>
 
 	<build>
