--- a/pom.xml
+++ b/pom.xml
@@ -49,11 +49,13 @@
 				<artifactId>spring-boot-starter-web</artifactId>
 			</dependency>
 
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.5.0</version> <!-- Verifique a versão mais recente -->
-		</dependency>
+			<dependency>
+				<groupId>mysql</groupId>
+				<artifactId>mysql-connector-java</artifactId>
+				<version>8.0.34</version> <!-- Substitua pela versão desejada -->
+			</dependency>
+
+
 
 	</dependencies>
 
