--- a/pom.xml
+++ b/pom.xml
@@ -49,12 +49,11 @@
 				<artifactId>spring-boot-starter-web</artifactId>
 			</dependency>
 
-			<dependency>
-				<groupId>mysql</groupId>
-				<artifactId>mysql-connector-java</artifactId>
-				<version>8.0.34</version> <!-- Substitua pela versão desejada -->
-			</dependency>
-
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.32</version>
+		</dependency>
 
 
 	</dependencies>
